[gd_scene load_steps=20 format=2]

[ext_resource path="res://Textures/$tf_template.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/VacuumHandler.gd" type="Script" id=3]
[ext_resource path="res://Scripts/ExperienceSystem.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=5]
[ext_resource path="res://Textures/Knife.png" type="Texture" id=6]
[ext_resource path="res://Scripts/MeleeWeapon.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.5, 4.5 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 108, 26, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 52, 108, 26, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 26, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 26, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 26, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 52, 36, 26, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 52, 72, 26, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 26, 36 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "up_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "down_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "left_walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "right_walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 75.06

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 5.5, 15 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -85, -54 )
collision_layer = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed = 50

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 6.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.615385, 0.666667 )
frames = SubResource( 4 )
animation = "right_walk"
playing = true

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="ExpVacuum" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource( 14 )

[node name="ExperienceSystem" type="Node" parent="."]
script = ExtResource( 4 )
increase = 1.2
increaseMethod = 1

[node name="Health" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pivot" type="Node2D" parent="."]

[node name="MeleeWeapon" type="Area2D" parent="Pivot"]
visible = false
position = Vector2( 19, 0 )
collision_layer = 16
collision_mask = 8
monitoring = false
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/MeleeWeapon"]
position = Vector2( -4.5, 0 )
shape = SubResource( 15 )

[node name="Sprite" type="Sprite" parent="Pivot/MeleeWeapon/CollisionShape2D"]
position = Vector2( 2.14577e-06, 9.53674e-07 )
scale = Vector2( 0.6875, 1.875 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Pivot/MeleeWeapon"]
wait_time = 2.0
autostart = true

[node name="OutTimer" type="Timer" parent="Pivot/MeleeWeapon"]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="PickUpArea" to="PickUpArea" method="_on_PickUpArea_body_entered"]
[connection signal="body_exited" from="PickUpArea" to="PickUpArea" method="_on_PickUpArea_body_exited"]
[connection signal="pickUpSignal" from="PickUpArea" to="ExperienceSystem" method="_on_PickUpArea_pickUpSignal"]
[connection signal="body_entered" from="Pivot/MeleeWeapon" to="Pivot/MeleeWeapon" method="_on_MeleeWeapon_body_entered"]
[connection signal="timeout" from="Pivot/MeleeWeapon/Timer" to="Pivot/MeleeWeapon" method="_on_Timer_timeout"]
[connection signal="timeout" from="Pivot/MeleeWeapon/OutTimer" to="Pivot/MeleeWeapon" method="_on_OutTimer_timeout"]
